index html added git command

--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <h1>Welocme to home page</h1>
     <h2>Second change</h2>
     <p>Final changes</p>
+
+    <p></p>
+
+    <p>use (git add filename) to add file to staging area</p>
+    <p>use (git add -A) to add all files to staging area at once</p>
+
+    <p>Checking changes before staging (git diff)</p>
+    <p>Checking changes after staging (git diff --staged)</p>
+    <p>Checking changes after commit (git diff head)</p>
+
+    <p>use (git log) to see all log for commit</p>
+    <p>use (git log -p -2) to see only 2 log for commit</p>
+
+
+    <p>use (git rm filename) to delete file permanently</p>
+    <p>use (git rm -f filename) to delete file forcefully</p>
+    <p>use (git rm --cached filename) to remove file from stage area</p>
+
 </body>
 
 </html>
