--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     <h3>staging about.html</h3>
     <h3>git restore 'file'</h3>
     <h3>git diff </h3>
+    <h3>making changes</h3>
+    <h3>another change</h3>
 
 </body>
 
