Update index.html after moving to remote

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Hello to git</h1>
     <h3>Going to initialize git</h3>
     <h3>staging index.html file</h3>
+    <h3>making changes to remote master</h3>
 </body>
 
 </html>
