change index.html in kanhaiya_master_origin

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Going to initialize git</h3>
     <h3>staging index.html file</h3>
     <h3>making changes to remote master</h3>
+    <h3>making changes to remote kanhaiya_master</h3>
 </body>
 
 </html>
